# agent-task-marketplace

./: .gitignore  Anchor.toml  Cargo.toml  DEMO_SCRIPT.md  DEPLOYMENT.md  LICENSE  README.md  package.json  setup-solana.sh
agora/: Anchor.toml  Cargo.toml  package-lock.json  package.json
agora/programs/agora/: Cargo.toml
agora/programs/agora/src/: lib.rs
agora/tests/: agora.ts
frontend/: README.md  env.example  package.json  tailwind.config.js
frontend/components/: MarketplaceSDK.ts
frontend/pages/: _app.tsx  index.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BidList.tsx  Footer.tsx  Header.tsx  InitializeProfile.tsx  PostTaskForm.tsx  SubmitBidForm.tsx  TaskDetail.tsx  TaskList.tsx  WalletContextProvider.tsx
frontend/src/hooks/: useAgoraProgram.ts
frontend/src/idl/: agora.ts
frontend/src/lib/: constants.ts
frontend/styles/: globals.css
programs/agent-task-marketplace/: Cargo.toml
programs/agent-task-marketplace/src/: lib.rs
programs/agent-task-marketplace/src/instructions/: accept_bid.rs  complete_milestone.rs  fund_escrow.rs  reject_bid.rs  release_payment.rs  submit_bid.rs  submit_review.rs  withdraw_bid.rs
programs/agent_task_marketplace/: Cargo.toml
programs/agent_task_marketplace/src/: state.rs
programs/agent_task_marketplace/src/instructions/: cancel_task.rs  initialize_agent_profile.rs  mod.rs  post_task.rs  release_payment.rs  request_refund.rs  update_task.rs
sdk/: idl.json  index.ts
sdk/types/: agent_task_marketplace.ts
tests/: agent-task-marketplace.ts
(+6 files in other folders)
