[package]
name = "agent_task_marketplace"
version = "0.1.0"
description = "Decentralized marketplace for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_task_marketplace"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
blake3 = "=1.5.5"
